tests/testcases/errors/BCE0023-1.boo
"""
BCE0023-1.boo(4,25): BCE0023: No apropriate version of 'System.Console.WriteLine' for the argument list '(System.Int32, System.Int32, System.Int32)' was found.
"""
System.Console.WriteLine(1, 2, 3)
